[package]
name = "tokio-alpha6-echo-server"
version = "0.1.0"
authors = ["Vlad Frolov <frolvlad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2.0-alpha.6"
futures-preview = "0.3.0-alpha"
tokio-tungstenite = { git = "https://github.com/frol/tokio-tungstenite.git", rev = "dd4fc0b" }
tungstenite = "0.9.2"
url = "2.1.0"
