[package]
name = "tokio-master-echo-server"
version = "0.1.0"
authors = ["Vlad Frolov <frolvlad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
async-tungstenite = { git = "https://github.com/sdroege/async-tungstenite.git", rev = "eb2c63e" }
tungstenite = "0.9.2"
async-std = "1.0.1"
