[package]
name = "tokio-0_2-echo-server"
version = "0.1.0"
authors = ["Vlad Frolov <frolvlad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio = { git = "https://github.com/tokio-rs/tokio.git", rev = "69975fb" }
tokio   = { version = "0.2", features = ["time", "net", "macros", "rt-threaded", "io-std", "io-util"] }
futures = "0.3"
futures-util = "0.3"
tokio-tungstenite = { git = "https://github.com/sdroege/tokio-tungstenite.git", branch = "stream-proxy-wakers" }
tungstenite = "0.9.2"
