[package]
name = "tokio-master-echo-server"
version = "0.1.0"
authors = ["Vlad Frolov <frolvlad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { git = "https://github.com/tokio-rs/tokio.git", rev = "69975fb" }
futures = "0.3.1"
tokio-tungstenite = { git = "https://github.com/frol/tokio-tungstenite.git", rev = "2740232" }
tungstenite = "0.9.2"
